[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm>=8.0", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "onepower_app"
version = "0.1"
description = "Python package for visualising and exploring power spectra and one-point statistics using the halo model framework."
readme = "README.md"
authors = [
    {name="Andrej Dvornik", email="andrej.dvornik@me.com"},
]
license = "MIT"

requires-python = ">=3.10, <3.13"
dependencies = [
    "streamlit",
    "plotly",
    "halomod @ git+https://github.com/halomod/halomod.git@main",
    "onepower>=0.7.0",
    "pre-commit",
    "mathjax",
]

[tool.poetry]
package-mode = false

[tool.ruff]
# Line length
line-length = 88

include = ["*.pyi", "*.py"]

# Exclude files/directories
exclude = [
    "docs/*",
    "legacy_input_files/*",
    "benchmarks/*",
    #"pk_to_real.py",
    #"pyfftlog.py",
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]


[tool.ruff.format]
# Equivalent to Black's skip-string-normalization
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint]
extend-select = [
    "E",    # pycodestyle
    "W",    # pycodestyle warning
    "UP",   # pyupgrade
    "C90",  # mccabe complexity
    "B",    # bugbear
    "A",    # builtins
    "C4",   # comprehensions
    "DTZ",  # datetime
    "FA",   # future annotations
    "PIE",  # flake8-pie
    "T",    # print statements
    "SIM",  # simplify
    "PTH",  # use Pathlib
    "NPY",  # numpy-specific rules
    "PERF", # performance
]

# Ignore rules equivalent to flake8's ignore list
ignore = [
    "E501",   # Line too long
    "E731",   # Do not assign a lambda expression, use a def
    "B008",   # Do not perform function calls in argument defaults
    "B023",   # Function definition does not bind loop variable
    "B905",   # Do not use `is` with a literal
    "C408",   # Unnecessary list comprehension - rewrite as a generator expression
    "F841",   # Unused variables
    "SIM103", # Bool
]

# Import organization (Ruff's import sorting is enabled by default)
[tool.ruff.lint.isort]
known-first-party = ["onepower"]

# Import sections (Ruff uses a similar section order)
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

# Default section for imports (same as isort's default_section)
default-section = "first-party"

# Multi-line output style (3 = "Vertical Hanging Indent")
combine-as-imports = true
lines-after-imports = 2
